# Chess98

./: .clang-format  .gitignore  CMakeLists.txt  DEV.md  README.md
Chess98/: Chess98.vcxproj  Chess98.vcxproj.filters  base.hpp  basicboard.hpp  bitboard.hpp  board.hpp  evaluate.hpp  genfiles.hpp  hash.hpp  heuristic.hpp  main.cpp  moves.hpp  movesgen.hpp  nnue.hpp  nnuefile.hpp  search.hpp  test.hpp  ucci.hpp  ui.hpp  utils.hpp
Training/: convert.py  model.py  train.py
Training/get_training_data/: convert.py  pre_convert.py
nnue/: eval.py  eval_quantized.py  model.py
tools/ui/: ui.html
